feat: place the occupation_codes list to a job-container
