# openapi/openapi.yml
@@ -138,10 +138,8 @@ components:
           example: Chef
         location:
           $ref: "#/components/schemas/RequestLocation"
-        occupationCodes:
-          type: array
-          items:
-            type: string
+        job:
+          $ref: "#/components/schemas/RequestJob"
         paging:
           $ref: "#/components/schemas/RequestPagingFromFrontend"
     RequestLocation:
@@ -156,6 +154,13 @@ components:
           items:
             type: string
         municipalities:
+          type: array
+          items:
+            type: string
+    RequestJob:
+      type: object
+      properties:
+        occupationCodes:
           type: array
           items:
             type: string
