# src/lib/api_app/src/api/routes/testbed/productizers/job/mod.rs
@@ -110,7 +110,7 @@ pub fn construct_productizer_requests(
     let jobs_request = JobsRequest {
         query: request_input.query,
         location: request_input.location,
-        occupation_codes: request_input.occupation_codes,
+        job: request_input.job,
         paging: RequestPaging {
             limit: request_limit,
             offset: offset,
